@startuml

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

title root-san

package "root-san" as root_san {
    entity "rooms" as rooms {
        + id: char(36)
        --
        + name: varchar(300)
        + created_at: timestamp
    }

    entity "room_members" as room_members {
        + member_id: char(36)
        + room_id: char(36) <<FK>>
        --
        + name: varchar(300)
        + created_at: timestamp
    }

    entity "events" as events {
        + id: char(36)
        --
        + room_id: char(36) <<FK>>
        + amount: int
        + name: varchar(300)
        + event_type: varchar(300)
        + event_at: datetime
        + created_at: timestamp
        + updated_at: timestamp
    }

    entity "transactions" as transactions {
        + id
        --
        + event_id: char(36) <<FK>>
        + amount: int
        + payer_id: char(36)
        + receiver_id: char(36)
        + created_at: timestamp
        + updated_at: timestamp
    }
}

rooms ||--|{ room_members
rooms ||--|{ events
events ||--|{ transactions

@enduml
